# SOG-Bloomcast-Ensemble

./: .coveragerc  .gitignore  .hgignore  2012_bloomcast_early_infile  2012_bloomcast_infile  2012_bloomcast_late_infile  2013_bloomcast_early_infile  2013_bloomcast_early_infile.yaml  2013_bloomcast_infile  2013_bloomcast_infile.yaml  2013_bloomcast_late_infile  2013_bloomcast_late_infile.yaml  CITATION  MANIFEST.in  README.rst  SoG-bloomcast.sublime-project  __pkg_metadata__.py  cloud_fraction_mapping.yaml  config.yaml  cronjob.sh  environment.yml  pyproject.toml  requirements.txt  rsync-shelob.sh  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yaml  pytest-with-coverage.yaml
bloomcast/: __about__.py  bloomcast.py  carbonate.py  ensemble.py  main.py  meteo.py  rivers.py  utils.py  visualization.py  wind.py
bloomcast/html/: results.html  results.mako
bloomcast/html/css/: style.css
bloomcast/tests/: test_bloomcast.py
cf_analysis/: cf_analysis.py  cf_hourlies.py
docs/: Deployment.rst  DesignNotes.rst  Development.rst  Makefile  conf.py  index.rst
ensemble_analysis/: ensemble_analysis.ipynb
envs/: environment-dev.yaml  environment-test.yaml  environment.yml  requirements.txt
run/: 2012_bloomcast_early_infile  2012_bloomcast_infile  2014_bloomcast_early_infile.yaml  2014_bloomcast_infile.yaml  2014_bloomcast_late_infile.yaml  2015_bloomcast_infile.yaml  2017_bloomcast_infile.yaml  2019_bloomcast_infile.yaml  2021_bloomcast_infile.yaml  2023_bloomcast_infile.yaml  2025_bloomcast_infile.yaml  2026_bloomcast_infile.yaml  cloud_fraction_mapping.yaml  config.yaml
run/2012/: 2012_bloomcast_late_infile
run/2014/: 2014_bloomcast_late_infile.yaml
run/2015/: 2015_bloomcast_infile.yaml
run/2016/: 2016_bloomcast_infile.yaml
run/2018/: 2018_bloomcast_infile.yaml
run/2020/: 2020_bloomcast_infile.yaml
run/2021/: 2021_bloomcast_infile.yaml
run/2022/: 2022_bloomcast_infile.yaml
run/2024/: 2024_bloomcast_infile.yaml
tests/: test_bloomcast.py  test_ensemble.py  test_meteo.py  test_rivers.py  test_utils.py  test_wind.py
www/templates/: spring_diatoms.mako
