# Copyright 2011– present by Doug Latornell and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SoG-bloomcast"
#dynamic = [ "version" ]
version = "3.1"
description = "Strait of Georgia spring diatom bloom predictor"
readme = "README.rst"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    {name = "Doug Latornell", email = "dlatornell@eoas.ubc.ca"}
]
dependencies = [
    # see envs/environment-dev.yaml for conda environment dev installation,
    # see envs/requirements.txt for package versions used during recent development    "arrow",
    "BeautifulSoup4",
    "cliff",
    "matplotlib",
    "numpy",
    "PyYAML",
    "requests"
    # "SOGcommand"  # use python -m pip install --editable SOG/
]

[project.urls]
"Homepage" = "https://salishsea.eos.ubc.ca/bloomcast/"
"Issue Tracker" = "https://github.com/SalishSeaCast/SOG-Bloomcast-Ensemble/issues"
"Source Code" = "https://github.com/SalishSeaCast/SOG-Bloomcast-Ensemble"

[project.scripts]
bloomcast = "bloomcast.main:main"

[tool.setuptools.entry-points."bloomcast.app"]
ensemble = "bloomcast.ensemble:Ensemble"


[tool.hatch.build.targets.wheel]
packages = ["SoG-bloomcast"]
