# Copyright 2011 – present by Doug Latornell and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloomcast"
dynamic = [ "version" ]
description = "Strait of Georgia spring diatom bloom predictor"
readme = "README.rst"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    {name = "Doug Latornell", email = "dlatornell@eoas.ubc.ca"},
    {name = "Susan Allen", email = "sallen@eoas.ubc.ca"},
]
dependencies = [
    # see envs/environment-dev.yaml for conda environment dev installation,
    # see envs/requirements.txt for package versions used during recent development
    "arrow",
    "BeautifulSoup4",
    "cliff",
    "matplotlib",
    "numpy",
    "PyYAML",
    "requests",
]

[project.urls]
"Homepage" = "https://salishsea.eos.ubc.ca/bloomcast/"
"Issue Tracker" = "https://github.com/SalishSeaCast/SOG-Bloomcast-Ensemble/issues"
"Source Code" = "https://github.com/SalishSeaCast/SOG-Bloomcast-Ensemble"

[project.scripts]
bloomcast = "bloomcast.main:main"

[tool.setuptools.entry-points."bloomcast.app"]
ensemble = "bloomcast.ensemble:Ensemble"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]


[tool.coverage.run]
branch = true
source = [ "bloomcast", "tests"]

[tool.coverage.report]
show_missing = true


[tool.hatch.build.targets.wheel]
packages = ["bloomcast"]

[tool.hatch.version]
path = "bloomcast/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
arrow = "*"
beautifulsoup4 = "*"
colander = "<2"
jupyterlab = "*"
cliff = "*"
matplotlib = "*"
numpy = "*"
pip = "*"
pixi-pycharm = ">=0.0.10,<0.0.11"
python = "3.14.*"
pyyaml = "*"
requests = "*"

[tool.pixi.pypi-dependencies]
sogcommand = { git = "https://github.com/SalishSeaCast/SOG.git" }
bloomcast = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
test-py314 = ["py314", "test"]

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"

[tool.pixi.feature.test.tasks]
pytest = "pytest"
pytest-cov = "pytest --cov=./"
pytest-cov-html = "pytest --cov=./ --cov-report html"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"
